--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "auth",
-  "version": "0.0.1",
+  "main": "node_modules/expo/AppEntry.js",
   "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
   "dependencies": {
-    "firebase": "^4.12.1",
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.4"
+    "expo": "^27.0.1",
+    "firebase": "^5.0.4",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
   },
   "devDependencies": {
-    "babel-jest": "22.4.3",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.3",
-    "react-test-renderer": "^16.3.0-alpha.1"
-  },
-  "jest": {
-    "preset": "react-native"
+    "eslint": "^4.19.1",
+    "eslint-config-rallycoding": "^3.2.0"
   }
 }
